JumpScript/tests/baselines/reference/incorrectClassOverloadChain.errors.txt
tests/cases/compiler/incorrectClassOverloadChain.jump(3,5): error TS2391: Function implementation is missing or not immediately following the declaration.


==== tests/cases/compiler/incorrectClassOverloadChain.jump (1 errors) ====
    class C {
        foo(): string;
        foo(x): number;
        ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
        x = 1;
    }